# SBEngine

./: CMakeLists.txt  README.md
resources/shaders/: shader.vert  simple.frag  simple.vert
src/SBEngine/: Audio.cpp  Audio.h  Component.cpp  Component.h  Core.cpp  Core.h  Entity.cpp  Entity.h  Environment.cpp  Environment.h  Keyboard.cpp  Keyboard.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  NonCopyable.h  Resource.h  Resources.cpp  Resources.h  SBEngine.h  Screen.cpp  Screen.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  Triangle.cpp  Triangle.h  engine.cpp
src/SBEngine/resources/: shader.frag
src/test_engine/: main.cpp
